--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,26 @@ services:
     volumes:
       # So that Traefik can listen to the Docker events
       - /var/run/docker.sock:/var/run/docker.sock
+  postgres-account:
+    image: 'postgres:15-alpine'
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=secret
+    ports:
+      - '5432:5432'
+    #   Set a volume for data and initial sql script
+    #   May configure initial db for future demo
+    volumes:
+      - 'pgdata_account:/var/lib/postgresql/data'
+      # - ./init:/docker-entrypoint-initdb.d/
+    command: ['postgres', '-c', 'log_statement=all']
   account:
     build:
       context: ./account
       target: builder
     image: account
+    env_file:
+      - ./account/.env.dev
     expose:
       - '8080'
     labels:
@@ -30,5 +45,9 @@ services:
       - ENV=dev
     volumes:
       - ./account:/go/src/app
+    depends_on:
+      - postgres-account
     # have to use $$ (double-dollar) so docker doesn't try to substitute a variable
     command: reflex -r "\.go$$" -s -- sh -c "go run ./"
+volumes:
+  pgdata_account:
